--- a/src/assets/sass/components/productCardShort.scss
+++ b/src/assets/sass/components/productCardShort.scss
@@ -40,7 +40,7 @@
 @media screen and (min-width: 700px) {
     .product-card-short {
         gap: 52px;
-        max-width: 800px;
+        // max-width: 800px;
 
         .cs-text {
             .new {
