--- a/src/assets/sass/components/productCardShort.scss
+++ b/src/assets/sass/components/productCardShort.scss
@@ -107,3 +107,10 @@
         }
     }
 }
+
+/* larger screens */ 
+@media screen and (min-width: 1550px) {
+    .product-card-short {
+        width: 1200px;
+    }
+}
