--- a/src/assets/sass/category.scss
+++ b/src/assets/sass/category.scss
@@ -60,3 +60,15 @@
         }
     }
 }
+
+/* larger screens */ 
+@media screen and (min-width: 1550px) {
+    .content-wrapper {
+        align-items: center;
+        width: 1200px;
+        margin: auto;
+        margin-bottom: 60px;
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
