--- a/src/assets/sass/components/cart.scss
+++ b/src/assets/sass/components/cart.scss
@@ -6,10 +6,10 @@
     height: 100vh;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.418);
-    padding-top: 24px;
+    padding-top: 114px;
     display: flex;
     justify-content: center;
-    top: 90px;
+    top: 0;
 
 
     .cart {
