--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -176,7 +176,7 @@ picture {
 #cs-navigation {
     width: 100vw;
     background-color: var(--navBackground);
-    position: fixed;
+    position: absolute;
     top: 0;
     z-index: 100;
 
@@ -273,7 +273,7 @@ picture {
     }
 
     .nav-links-wrapper {
-        height: 100vh;
+        height: 200vh;
         opacity: 0;
         background-color: rgba(0, 0, 0, 0.377);
         overflow: hidden;
@@ -306,6 +306,26 @@ picture {
 
         ul {
             display: none;
+        }
+    }
+
+    // cart button & notification
+    .cart-button {
+        position: relative;
+
+        .notification {
+            position: absolute;
+            height: 20px;
+            width: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 12px;
+            border-radius: 50%;
+            background-color: var(--primary);
+            color: white;
+            right: -5px;
+            top: -12px;
         }
     }
 }
@@ -477,7 +497,7 @@ picture {
     }
 }
 
-/* larger screens */ 
+/* larger screens */
 @media screen and (min-width: 1550px) {
     #about {
         width: 1200px;
