adjusted desktop spacings

--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -93,6 +93,7 @@ h2 {
 
 h2 {
     letter-spacing: 1.29px;
+    line-height: 1.1;
 }
 
 // new product text
@@ -492,6 +493,7 @@ picture {
 
             p {
                 text-align: left;
+                max-width: 445px;
             }
         }
     }
