--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -478,6 +478,7 @@ picture {
 
         picture {
             order: 1;
+            width: 50%;
 
             img {
                 margin-bottom: 0;
